# gtp_library

./: .gitlab-ci.yml  .gitlab-ci.yml_ignored  LICENSE  mongodb.md  oss_contributions.md  server.c
ai/: getting_started.yaml
arduino/: arduino_jun15a.ino
boot/: grub.md  ipmi.md  iscsi.md  readme.md  secure_boot.md
ceph/: ceph.sh  readme.md
cpp/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  barrier_with_condition_variable.cpp  cpp_sh_wrapper.sh
cpp/change_bit_in_integer/: CMakeLists.txt  README.txt  doxygen.cfg  test_specification.txt
cpp/change_bit_in_integer/inc/: bit_processor.h
cpp/change_bit_in_integer/src/: bit_processor.c  main.c  unit_tests.c
cpp/detect_key_press/: README.txt  main.cpp
cpp/email_with_curl/: main.c  main.cpp
cpp/gtp_library/: CMakeLists.txt  doxygen.cfg
cpp/gtp_library/src/: main.cpp  main_unit_tests.cpp
cpp/gtp_library/src/app/: application.hpp  sub_program.cpp
cpp/gtp_library/src/app/applications/: detailed_query.cpp
cpp/gtp_library/src/gtp/: debugging_utils.cpp
cpp/gtp_library/src/gtp/db/mock/: mysql_connection.hpp  mysql_result_set.hpp
cpp/gtp_library/src/gtp/db/real/: mysql_connection.cpp  mysql_driver.hpp  mysql_result_set.hpp
cpp/remove_non_digit_chars/: README.md  Timer.cpp  Timer.h  main.cpp
cpp/sockets/: CMakeLists.txt  readme.md
cpp/sockets/client/: CMakeLists.txt
cpp/sockets/client/src/: main.cpp
cpp/sockets/server/: CMakePresets.json
cpp/sockets/server/src/: ServerSocket.cpp  ServerSocket.hpp  main.cpp
cpp/sockets/src/: ServerSocket.cpp  ServerSocket.hpp
cpp/src/app/: application.cpp  sub_program.hpp
cpp/src/app/applications/: detailed_query.cpp  fast_query.cpp  real_socket_test.cpp
cpp/src/app/tests/: example.cpp
cpp/src/gtp/: LICENSE  debugging_utils.cpp  namespace.hpp
cpp/src/gtp/db/interface/: mysql_connection.cpp  mysql_connection.hpp  mysql_result_set.cpp  mysql_result_set.hpp
cpp/src/gtp/db/real/: mysql_connection.hpp  mysql_driver.cpp  mysql_result_set.cpp
cpp/sum_elements_array_before_and_after/: CMakeLists.txt  README.txt  doxygen.cfg  test_specification.txt
cpp/sum_elements_array_before_and_after/inc/: find_index.h
cpp/sum_elements_array_before_and_after/src/: find_index.c  main.c  unit_tests.c
flash_action_script/flex_java_applet/src/: Java.java  flexJava.mxml
flash_action_script/load_local_file/src/: localFileTest.mxml
flash_action_script/red5/: FAQ.php  HowToCreateAnApplicationForRed50.9.1.php  index.php  miniDoc.php
flash_action_script/stratus_example_file/: index.mxml
flash_action_script/stratus_example_file/grozav/paul/net/stratus/: StratusPeerEvent.as  StratusSendStream.as
flash_action_script/stratus_example_time/src/: stratusExampleTime.mxml
flash_action_script/text_flow_around_image/src/: textFlowAroundImage.mxml
flask/: one.py
gitlab_runner/: .gitignore  docker.sh  start_runner.sh
gitlab_runner/podman/: .gitignore  Containerfile  env.vars  manage.sh  readme.md
gitlab_runner/podman/fs/root/: entrypoint.sh
gitlab_runner/podman/fs/root/gitlab_runner/scripts/: cleanup.sh  prepare.sh  run.sh
grpc/: CMakeLists.txt  build.sh  conanfile.py
grpc/src/: client.cpp  server.cpp
grpc/src/proto/: rpc.proto
k8s/: ceph.md  gateway_api.md  helm.md  k8s.md  k8s_node_disk_usage.md  k8s_resources.md  kargo.md  kind_and_k3s.md  kms_cryptor.sh  kubeadm_certificates.md  minikube.txt  pg-nginx-pod.yaml  pg-volatile-prometheus.yml  setup_k8s.sh  systemd_container.Containerfile
k8s/android/: readme.md
k8s/ansible/: README.txt  run.sh
k8s/ansible/keys/: README.txt
k8s/ansible/kube-cluster/: README.txt  ansible.cfg  hosts
k8s/argocd/: bootstrap_app.yaml  manifests_app.yaml  readme.md
k8s/argocd/apps/: helm_chart.yaml  helm_charts.yaml  manifests.yaml
k8s/argocd/helm_charts/app_two/: .helmignore  Chart.yaml  values.yaml
k8s/argocd/helm_charts/app_two/templates/: configmap.yaml
k8s/argocd/manifests/: configmap.yaml  deployment.yaml  service.yaml
language/: yaml.md
linux/: curl.md
mysql/: galera.md
pascal/: 1.pas  2.pas  3.pas  4.pas  PIXEL.pas  README.txt  button.pas  game.pas  lines.pas  meniu.pas  morse.pas  paint.pas  paintfro.pas  paleta.pas  patrate.pas  rama.pas  telefon.pas  unde.pas  unu.pas  up.pas  window.pas
php/: mcxindia_BhavCopyCommoditywiseArchive.php  tramvai_mandruloc.php
php/PCTracker/: downloadVBS.php  index.php  register.php  registerForm.php  track.php  view.php
php/long_polling/: client.php  commonSettings.php  data  dataInterface.php  server.php
php/my_framework/: index.php  sendEmailWithAttachment.php
php/my_framework/grozav/paul/: Email.php  Utils.php
php/my_framework/grozav/paul/html/: Body.php  HTMLDocument.php  Text.php
php/my_framework/grozav/paul/html/page/: ConstantWidthPage.php
php/my_framework/loginSystemClass/: LoginSystem.config.php  LoginSystem.php  index.php
plots/: microsoft_os_ram_usage.py  solar_system.py
podman/: readme.md
programs/MongoDB_CLI/: readme.sh
programs/MongoDB_Shell/: readme.sh
programs/microsoft_sysinternals__process_explorer/: readme.txt
prometheus/: exporters.md
robotics/: .gitlab-ci.yml  README.md
robotics/hardware/: CMakeLists.txt  resolve_google_test.cmake
robotics/hardware/cpp/src/hardware_demo/: main.cpp
robotics/hardware/raspberry_pi/zero/: readme.md
robotics/hardware/src/hardware/: electric_value.hpp  pin.cpp  pin.hpp
robotics/hardware/src/hardware_tests/: pin.cpp
shell/: crontab_second.sh  ip_scanner_ping.sh  monitor_process.sh  port_scanner_for_ip.sh  scan_ips_for_port.sh  snmp.sh
vagrant/: oss_contributions.md  readme.md
vagrant/freedos/: Vagrantfile
vagrant/k8s/: .gitignore  Vagrantfile  haproxy.cfg  lb.sh  manage.sh  settings.yml
vagrant/k8s/scripts/: common.sh  control_plane.sh  control_plane_subsequent.sh  dashboard.sh  longhorn.sh  master.sh  node.sh  worker.sh
vagrant/netboot/: Vagrantfile  diagram.plantuml
vagrant/netboot/vms/gateway/fs/mnt/: custom_dnsmasq.conf  dhcpd.conf  (+3 more)
windows/: azure_cbl_mariner.md  desktop_icons__toggle.ps1  get_yaml_value.bat  history.md  security.md  setup.bat  taskbar__auto_hide__set.ps1
(+17 files in other folders)
